--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,52 +1,4 @@
-#card-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50%;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 10px;
-    transition: all 0.3s;
-    cursor: pointer;
-}
-#cart-item{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50%;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 10px;
-    transition: all 0.3s;
-    cursor: pointer;
-}
-#cart-item-content{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 20%;
-    height: 50%;
-    background-color: gray;
-    color: azure;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 10px;
-    transition: all 0.3s;
-    cursor: pointer;
-}
-#cart-total{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 50%;
+body{
+  width: 100%;
+  height: 100%;
 }
