--- a/src/app/pages/product-detail/product-detail.component.scss
+++ b/src/app/pages/product-detail/product-detail.component.scss
@@ -1,36 +1,24 @@
 #card-holder{
-    height: 100%;
-    width:100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .example-card {
   max-width: 300px;
   border-radius: 10px;
-  color: black;
-  background-color: white;
-  box-shadow: 0 4px 6px 0 black;
+  color: aliceblue;
   padding: 20px;
   margin: 10px;
   transition: all 0.3s;
   cursor: pointer;
 }
 #price{
-    font-size: 20px;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-}
-.mat-mdc-card-title~.mat-mdc-card-subtitle{
-    font-size: 14px;
-    color: black;
-}
-.mat-mdc-card-subtitle{
-    font-size: 14px;
-    color: black;
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
 }
 section {
   display: table;
